# mandrake

./: CMakeLists.txt  README.md  http.cpp  http.h  main.cpp
src/: main.cpp
src/model/: app.cpp  app.hpp  constants.hpp  request.cpp  request.hpp  response.cpp  response.hpp
src/server/: server.cpp  server.hpp
src/utils/: iterators.cpp  iterators.hpp
